# zcd

./: .bzrignore  .gitignore  Makefile.am  README  api.vala  caller_info.vala  common_helpers.vala  common_skeleton.vala  common_stub.vala  configure.ac  connection_protocol.vala  json_handling.vala  listeners.vala  mod_interfaces.vala  mod_main.vala  mod_skeleton.vala  mod_stub.vala  rpcdesign.vala  rpcdesign_common_helpers.vala  rpcdesign_common_skeleton.vala  rpcdesign_common_stub.vala  rpcdesign_output_api.vala  rpcdesign_output_caller_info.vala  rpcdesign_output_common_helpers.vala  rpcdesign_output_common_skeleton.vala  rpcdesign_output_common_stub.vala  rpcdesign_output_interfaces.vala  rpcdesign_output_tasklet_system.vala  rpcdesign_output_xxx_skeleton.vala  rpcdesign_output_xxx_stub.vala  rpcdesign_sample_interfaces.vala  rpcdesign_sample_skeleton.vala  rpcdesign_sample_stub.vala  sample_helpers.vala  sample_interfaces.vala  sample_main.vala  sample_skeleton.vala  sample_stub.vala  sample_tasklet.vala  sample_udp_main.vala  (+8 more)
check/: client.vala  server.vala
docs/: README
eth_domain_src/: eth_domain.vala
radio_domain_src/: radio_domain.vala
test/: Makefile.am  README  common_helpers.vala  common_skeleton.vala  common_stub.vala  configure.ac  sample_interfaces.vala  sample_skeleton.vala  sample_stub.vala  test_listen.vala  test_salutami.vala  test_salutami2.vala  test_scrivi.vala  test_scrivi_serializables.vala  test_serializables.vala
test/buildlibsources/: interfaces.rpcidl  readme
testsuites/: .gitignore  fake.vala
testsuites/eth_domain/: eth_domain.vala
testsuites/radio_domain/: radio_domain.vala
testsuites/test_datagrams/: .gitignore  alpha_listeners.vala  alpha_main.vala  alpha_peculiar.vala  beta_main.vala  beta_peculiar.vala  beta_tasklet_system.vala  common.vala  gamma_common.vala  gamma_connection_protocol.vala  gamma_json_handling.vala  gamma_main.vala  gamma_peculiar.vala  test_datagrams
testsuites/test_json_handling/: test_json_handling.vala
testsuites/test_libs/: test_libs.vala
testsuites/test_rpcdesign_1/: .gitignore  README  alpha_peculiar.vala  beta_peculiar.vala  beta_rpc_skeleton.vala  beta_serializables.vala  gamma_main.vala  gamma_peculiar.vala  interfaces.rpcidl  main.vala  rpc_skeleton.vala  serializables.vala  test_rpcdesign_1
testsuites/test_rpcdesign_1/testerrpc/: .gitignore  interfaces.rpcidl
testsuites/test_streams/: api.vala  caller_info.vala  party_a.vala  party_b.vala  senders.vala  test_streams.vala
testsuites/test_tcpclient_1/: test_tcpclient_1.vala
testsuites/test_tcpclient_2/: test_tcpclient_2.vala
testsuites/test_tcpclient_3/: test_tcpclient_3.vala
testsuites/test_tcpserver_1/: fake.vala  test_tcpserver_1.vala
testsuites/test_tcpserver_2/: test_tcpserver_2.vala
testsuites/test_tcpserver_3/: test_tcpserver_3.vala
testsuites/test_udpclient_1/: test_udpclient_1.vala
testsuites/test_udpclient_2/: test_udpclient_2.vala
testsuites/test_udpserver_1/: test_udpserver_1.vala
testsuites/test_udpserver_2/: test_udpserver_2.vala
testsuites/test_zcd_tcp/: fake.vala  test_zcd_tcp.vala
